// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/CheckBox CheckBox with Label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-58ep04-CheckBox"
      >
        <span
          className="css-1h0729d-CheckBox"
        >
          <input
            checked={false}
            className="css-tpx4o9-CheckBox"
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-howegt-CheckBox"
        >
          Not checked single
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-58ep04-CheckBox"
      >
        <span
          className="css-1h0729d-CheckBox"
        >
          <input
            checked={true}
            className="css-1fdnkzr-CheckBox"
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-howegt-CheckBox"
        >
          Checked Single
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-2w5jy3-CheckBox"
      >
        <span
          className="css-1h0729d-CheckBox"
        >
          <input
            checked={true}
            className="css-1fdnkzr-CheckBox"
            data-testid="checkbox"
            disabled={true}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-howegt-CheckBox"
        >
          Disabled single
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-58ep04-CheckBox"
      >
        <span
          className="css-1h0729d-CheckBox"
        >
          <input
            checked={true}
            className="css-97n13b-CheckBox"
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-howegt-CheckBox"
        >
          Checked intermediate
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-58ep04-CheckBox"
      >
        <span
          className="css-1h0729d-CheckBox"
        >
          <input
            checked={false}
            className="css-z4uvgo-CheckBox"
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-howegt-CheckBox"
        >
          Not checked intermediate
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-2w5jy3-CheckBox"
      >
        <span
          className="css-1h0729d-CheckBox"
        >
          <input
            checked={true}
            className="css-97n13b-CheckBox"
            data-testid="checkbox"
            disabled={true}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-howegt-CheckBox"
        >
          Disabled checked intermediate
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/CheckBox CheckBox without 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-58ep04-CheckBox"
      >
        <span
          className="css-1h0729d-CheckBox"
        >
          <input
            checked={true}
            className="css-1fdnkzr-CheckBox"
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-58ep04-CheckBox"
      >
        <span
          className="css-1h0729d-CheckBox"
        >
          <input
            checked={false}
            className="css-tpx4o9-CheckBox"
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-58ep04-CheckBox"
      >
        <span
          className="css-1h0729d-CheckBox"
        >
          <input
            checked={true}
            className="css-97n13b-CheckBox"
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-58ep04-CheckBox"
      >
        <span
          className="css-1h0729d-CheckBox"
        >
          <input
            checked={false}
            className="css-z4uvgo-CheckBox"
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-2w5jy3-CheckBox"
      >
        <span
          className="css-1h0729d-CheckBox"
        >
          <input
            checked={false}
            className="css-z4uvgo-CheckBox"
            data-testid="checkbox"
            disabled={true}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
      </span>
    </div>
  </div>
</div>
`;
